<resources>
    <string name="app_name">Rippleitt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="update_payment_method">Update Payment Method</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>
    <string name="resend_otp">Didn\'t receive code? Resend Code</string>
    <string name="edit_profile_pic">Edit Profile Photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="or">or</string>
    <string name="fbLogin">Login With Facebook</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="skip">SKIP</string>
    <string name="addpayment">Add Payment Method</string>
    <string name="addcardDetails">Please add your card details</string>
    <string name="cardNo">Card Number*</string>
    <string name="cardholderName">Card Holder Name*</string>
    <string name="cvv">CVV*</string>
    <string name="next">Next</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="contact">Contact Number</string>
    <string name="confirm_pass">Confirm Password*</string>
    <string name="addr1">Address 1*</string>
    <string name="addr2">Address 2</string>
    <string name="refer_code">Referral Code</string>
    <string name="upload_profile">Upload Your Photo</string>
    <string name="addContact"><u>+ ADD NEW ADDRESS</u></string>
    <string name="product_price_mange">$300  Weight:1kg  Unit:1</string>
    <string name="product_detail_wishlist">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="productdetail"><u>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </u>.</string>
    <string name="notification_data">Jhon Smith has been accepted your offer, he been opened to chat with you.</string>
    <string name="upload_product_img">Upload Listing Photo*</string>
    <string name="description_product">Description or Keywords*</string>
    <string name="product_qty">Quantity*</string>
    <string name="list_add_next"><![CDATA[List & Add Next]]></string>
    <string name="finish">Finish</string>
    <string name="save_Draft">Save as Draft</string>
    <string name="publish">Publish</string>
    <string name="done">Done</string>
    <string name="edit_product_img">Edit Product Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key">AIzaSyDqHFU_1UkrpP-cfnCuq4tslIX893x6QwI</string>
    <string name="facebook_app_id">167627797256381</string>
    <string name="fb_login_protocol_scheme">fb167627797256381</string>
    <string name="strBuyNow">Buy Now</string>
    <string name="strNeedHelp">Raise Dispute</string>
    <string name="strAddComment">Add Comment</string>
    <string name="bsb">BSB*</string>
    <string name="accountName">Account Holder Name*</string>
    <string name="accountNumber">Account Number*</string>
    <string name="update_account">Update Bank Account Details</string>
    <string name="strOrderSummary">Order Summary</string>
    <string name="strDummy">Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .Lorem Ipsum dummy text .</string>
    <string name="order_hint">Hint :- Make payment will add the payment to RippleItt</string>
    <string-array name="subcat_arr">
        <item>Sub Category*</item>
    </string-array>
    <string-array name="listing_units">
        <item>Boxes</item>
        <item>Packets</item>
        <item>Pcs.</item>
    </string-array>
    <string-array name="calendar_months">
        <item>Expiration Month*</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="calendar_year">
        <item>Expiration Year*</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>

    </string-array>
    <string-array name="sub_cat_df">
        <item>Sub Category*</item>
    </string-array>
    <string-array name="Type">
        <item>%</item>
        <item>$</item>
    </string-array>
</resources>